[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchaid"
version = "0.1.3"
description = "A PyTorch utility library that streamlines the deep learning training pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Harunori Kawano" },
]
keywords = ["pytorch", "deep learning", "training", "transformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.60.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/HarunoriKawano/torchaid"
Issues = "https://github.com/HarunoriKawano/torchaid/issues"

[tool.setuptools.packages.find]
where = ["src"]
